<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_album_detailed_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:id="@+id/album_poster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:foregroundGravity="center"
        android:src="@drawable/a1008"/>

    <LinearLayout
        android:id="@+id/album_detail"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/album_poster"
        android:background="@drawable/edittext_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/al_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/margin_top_first_last_ele"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_name"

            />

        <TextView
            android:id="@+id/al_artist"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_artist"
            />

        <TextView
            android:id="@+id/al_rel_date"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_release_date"
            />

        <TextView
            android:id="@+id/al_producer"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_produer"
            />

        <TextView
            android:id="@+id/al_awards"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_awards"
            />

        <TextView
            android:id="@+id/al_geners"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_geners"
            />

        <TextView
            android:id="@+id/al_songs"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_songs"
            />

        <TextView
            android:id="@+id/al_ratings"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/margi_top"
            android:layout_height="@dimen/text_height"
            android:textColor="@color/black_color"
            android:text="@string/dl_album_ratings"
            />
    </LinearLayout>
   <!-- <Button
        android:id="@+id/jobOpening"
        android:layout_width="match_parent"
        android:layout_below="@+id/album_detail"
        android:layout_marginTop="@dimen/button_top_pad"
        android:layout_height="@dimen/text_view_height"
        android:background="@drawable/edittext_shape"
        android:text="@string/job_openings"
        android:textColor="@color/black_color"/>

        -->
</RelativeLayout>
</ScrollView>